--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -1,4 +1,3 @@
-
 @layer base {
   :root {
     --background: 0 0% 98%;
@@ -97,6 +96,19 @@
 
   .bounce {
     animation: bounce 2s infinite ease-in-out;
+  }
+
+  .reaction-menu {
+    transform-origin: bottom left;
+    left: -100px;
+    min-width: 450px;
+  }
+  
+  @media (max-width: 640px) {
+    .reaction-menu {
+      left: 0;
+      transform-origin: bottom center;
+    }
   }
 }
 
